geneweb (5.02~cvs20091031-2) UNRELEASED; urgency=low

  * Add README.source (copied from samba)

 -- Christian Perrier <bubulle@debian.org>  Sat, 07 Nov 2009 08:47:11 +0100

geneweb (5.02~cvs20091031-1) unstable; urgency=low

  * Release CVS snapshot as upstream didn't release for a while
  * Add 0 and 6 runlevels to Should-Stop in init scripts
  * Update Standards-Version to 3.8.3 (checked)

 -- Christian Perrier <bubulle@debian.org>  Sat, 31 Oct 2009 19:02:25 +0100

geneweb (5.01-9) unstable; urgency=low

  * First upload for squeeze
  * Upgrade Standards to 3.8.1: /var/run/gwtp has been dealt with
    (see below)
  * debian/patches/014_no-warn-error: disable -warn-error to fix
    a build failure. Closes: #521674
    Thanks to Stéphane Glondu for the patch
  * Lintian fixes:
    - geneweb.postinst: no longer ignore errors (set -e)
    - gwtp.postinst: no longer ignore errors (set -e)
    - gwtp.prerm: no longer ignore errors (set -e)
    - gwsetup.postinst: no longer ignore errors (set -e)
    - control: add ${misc:Depends} to gwtp dependencies
    - gwtp.dirs, add-on/gwtp/cgi/gwtp.cgi: /var/run/gwtp is no
      longer provided in the package but created dynamically by the CGI
      wrapper
  * No longer use iso_639.tab for languages' names. Use
    isoquery output instead. Thanks to Tobias Quatamer for the patch
    Closes: #523161
  * Drop upgrade code from a pre-lenny version in gwtp.prerm. That empties
    that script which is thus removed.

 -- Christian Perrier <bubulle@debian.org>  Sun, 12 Apr 2009 11:57:21 +0200

geneweb (5.01-8) unstable; urgency=low

  * Add "-bindir" to gwsetup's invocation in the wrapper script.
    Thanks to Andreas Beckmann for the proposed patch.
    Closes: #500166
  * Remove stupid debugging line in gwtp's CGI script
    Closes: #503849
  * Update Standards to 3.8.0

 -- Christian Perrier <bubulle@debian.org>  Thu, 27 Nov 2008 10:42:56 +0100

geneweb (5.01-7) unstable; urgency=low
