@@ -15,9 +15,6 @@ else
         fi)
 endif
 
-# Use quilt for patches
-include /usr/share/quilt/quilt.make
-
 configure:
 
 configure-stamp:	patch
@@ -134,4 +131,4 @@ binary-arch: build install
 	dh_builddeb
 
 binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install patch unpatch
+.PHONY: build clean binary-indep binary-arch binary install
