@@ -1,6 +1,7 @@
 geneweb (5.02~cvs20091031-2) UNRELEASED; urgency=low
 
   * Add README.source (copied from samba)
+  * Convert to 3.0 (quilt) source package format
 
  -- Christian Perrier <bubulle@debian.org>  Sat, 07 Nov 2009 08:47:11 +0100
 
